--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,16 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@tailwind variants;
+@import url('/public/Licorice-Regular.ttf');
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-* {
-  box-sizing: border-box;
+@layer components {
+    .btn-primary{
+        @apply bg-indigo-500 text-white font-bold rounded-lg py-2 px-4 shadow-lg hover:bg-blue-200 focus:ring-2
+    }
+    .btn-code{
+        @apply border-2 font-mono text-sm text-white font-bold py-2 px-4 shadow-lg hover:bg-blue-200 focus:ring-2
+    }
+    
 }
