Side navbar mobile first

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,11 +6,52 @@
 
 
 @layer components {
+    .title{
+        @apply mt-14 ml-4 text-4xl font-bold text-blue-800 my-4;
+    }
     .btn-primary{
         @apply bg-indigo-500 text-white font-bold rounded-lg py-2 px-4 shadow-lg hover:bg-blue-200 focus:ring-2
     }
     .btn-code{
         @apply border-2 font-mono text-sm text-white font-bold py-2 px-4 shadow-lg hover:bg-blue-200 focus:ring-2
     }
+    .wrapper{
+        @apply fixed left-0 top-0 bottom-0 z-50 w-12 flex flex-col h-screen justify-between items-center py-6
+    }
+    .wrapperXs{
+        @apply fixed left-0 top-0 bottom-0 z-50 w-screen bg-white flex flex-row h-12 justify-center items-center py-6
+    }
+    .navListItems {
+        @apply flex flex-col items-center w-full;
+    }
+    .navListItemsXs {
+        @apply flex flex-row items-center w-full justify-center;
+    }
+    .navItem {
+        @apply text-gray-400 hover:text-gray-800 text-xl py-4 cursor-pointer;
+    }
     
+    .navItemActive {
+        @apply text-blue-600 hover:text-blue-700; 
+    }
+    
+    .tooltip {
+        @apply absolute w-auto min-w-max left-16 font-bold text-lg hidden;
+    }
+    
+    .bottomWrapper {
+        @apply flex flex-col justify-between items-center;
+    }
+    
+    .notifications {
+        @apply w-10 h-10 bg-gray-100 hover:bg-gray-200 cursor-pointer rounded-xl flex items-center justify-center text-gray-800 text-lg relative mb-4;
+    }
+    
+    .badge {
+        @apply h-5 w-5 flex justify-center items-center text-white absolute -top-1 -right-1 bg-red-500 text-xs rounded-full;
+    }
+    
+    .settingsLogo {
+        @apply text-3xl text-gray-400 hover:text-gray-800 cursor-pointer;
+    }
 }
