--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,4 +50,8 @@
     .settingsLogo {
         @apply text-3xl text-gray-400 hover:text-gray-800 cursor-pointer;
     }
+
+    .list{
+        @apply p-2 border-2 hover:text-xl my-2 rounded-md bg-stone-800 cursor-pointer;
+    }
 }
