--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,6 +52,6 @@
     }
 
     .list{
-        @apply p-2 border-2 hover:text-xl my-2 rounded-md bg-stone-800 cursor-pointer;
+        @apply p-2 border-2 hover:bg-amber-500 hover:text-black my-2 cursor-pointer;
     }
 }
