--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,4 +54,13 @@
     .list{
         @apply p-2 border-2 hover:bg-amber-500 hover:text-black my-2 cursor-pointer;
     }
+    .video {   
+        object-fit: cover;   
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top:0;
+        left:0;
+        z-index: -1; 
+    }
 }
